@@ -114,13 +114,13 @@ public class TypeConversionUtil {
             if (object instanceof Number && Number.class.isAssignableFrom(classConvertTo)) {
                 Number n = (Number) object;
                 if (classConvertTo == Long.class) {
-                    return (T) new Long(n.longValue());
+                    return (T) Long.valueOf(n.longValue());
                 }
                 if (classConvertTo == Integer.class) {
-                    return (T) new Integer(n.intValue());
+                    return (T) Integer.valueOf(n.intValue());
                 }
                 if (classConvertTo == Byte.class) {
-                    return (T) new Byte(n.byteValue());
+                    return (T) Byte.valueOf(n.byteValue());
                 }
                 if (classConvertTo == Double.class) {
                     return (T) new Double(n.doubleValue());
@@ -159,19 +159,19 @@ public class TypeConversionUtil {
                 Date date;
                 String formattedDate = (String) object;
                 try {
-                    date = CalendarUtil.convertToDate(formattedDate, CalendarUtil.DATE_WITH_HOUR_MINUTES_SECONDS_FORMAT);
+                    date = CalendarUtil.convertToDate(formattedDate, CalendarUtil.DATE_WITH_HOUR_MINUTES_SECONDS_FORMAT_STR);
                 } catch (Exception e1) {
                     try {
-                        date = CalendarUtil.convertToDate(formattedDate, CalendarUtil.DATE_WITH_HOUR_MINUTES_FORMAT);
+                        date = CalendarUtil.convertToDate(formattedDate, CalendarUtil.DATE_WITH_HOUR_MINUTES_FORMAT_STR);
                     } catch (Exception e2) {
                         try {
-                            date = CalendarUtil.convertToDate(formattedDate, CalendarUtil.DATE_WITHOUT_TIME_FORMAT);
+                            date = CalendarUtil.convertToDate(formattedDate, CalendarUtil.DATE_WITHOUT_TIME_FORMAT_STR);
                         } catch (Exception e3) {
                             try {
-                                date = CalendarUtil.convertToDate(formattedDate, CalendarUtil.HOURS_MINUTES_SECONDS_FORMAT);
+                                date = CalendarUtil.convertToDate(formattedDate, CalendarUtil.HOURS_MINUTES_SECONDS_FORMAT_STR);
                             } catch (Exception e4) {
                                 try {
-                                    date = CalendarUtil.convertToDate(formattedDate, CalendarUtil.HOURS_MINUTES_FORMAT);
+                                    date = CalendarUtil.convertToDate(formattedDate, CalendarUtil.HOURS_MINUTES_FORMAT_STR);
                                 } catch (Exception e5) {
                                     throw new InternalApplicationException("Unable to find datetime format for '" + formattedDate + "'");
                                 }
@@ -236,6 +236,18 @@ public class TypeConversionUtil {
         }
     }
 
+    public static boolean isEmptyList(Object value) {
+        if (value == null) {
+            return true;
+        } else if (value.getClass().isArray()) {
+            return Array.getLength(value) == 0;
+        } else if (value instanceof List) {
+            return ((List<?>) value).isEmpty();
+        } else {
+            throw new RuntimeException("Unsupported array type " + value.getClass());
+        }
+    }
+
     public static Object getListFirstValueOrNull(Object container) {
         int size = TypeConversionUtil.getListSize(container);
         return size > 0 ? TypeConversionUtil.getListValue(container, 0) : null;
@@ -257,7 +269,7 @@ public class TypeConversionUtil {
                 throw new RuntimeException("Array has insufficient length, index = " + index);
             }
         } else {
-            throw new RuntimeException("Unsupported array type " + (container != null ? container.getClass() : "null"));
+            throw new RuntimeException("Unsupported array type " + container.getClass());
         }
     }
 
@@ -325,7 +337,7 @@ public class TypeConversionUtil {
             return (T) "";
         }
         if (clazz == Long.class) {
-            return (T) new Long(0);
+            return (T) Long.valueOf(0);
         }
         if (clazz == Boolean.class) {
             return (T) Boolean.FALSE;
